# 26-wuren-zxl

./: .bashrc  CMakeLists.txt  README.md  task2-1.sh
devel/: .catkin  local_setup.fish  local_setup.sh  setup.sh
devel/include/tur_msgs/: lir.h
devel/include/turtle_control_pkg/: TurtleSpeed.h
devel/lib/cone_counter/: cone_counter  count_cones
devel/lib/cone_viz/: cone_viz_node
devel/lib/control_pkg/: turtle_control_node
devel/lib/cpp_pkg/: cpp_node  point_cloud_processor
devel/lib/pkgconfig/: cone_counter.pc  cone_viz.pc  control_pkg.pc  cpp_pkg.pc  fsd_common_msgs.pc  lir_pkg.pc  tur_msgs.pc  turtle_control_pkg.pc
devel/lib/turtle_control_pkg/: turtle_control_node
src/cone_counter/: CMakeLists.txt  README01.md  package.xml
src/cone_counter/src/: count_cones.cpp
src/cone_viz/: CMakeLists.txt  README02.md  package.xml
src/cone_viz/src/: cone_viz_node.cpp
src/control_pkg/: CMakeLists.txt  package.xml
src/control_pkg/src/: turtle_control_node.cpp
src/cpp_pkg/: CMakeLists.txt  package.xml
src/cpp_pkg/src/: cpp_node.cpp  point_cloud_processor.cpp
src/lir_pkg/: CMakeLists.txt  package.xml
src/lir_pkg/config/: turtle_params.yaml
src/lir_pkg/launch/: turtle_control.launch
src/lir_pkg/scripts/: lir_node.py
src/tur_msgs/: CMakeLists.txt
src/tur_msgs/msg/: lir.msg
src/turtle_control_pkg/: CMakeLists.txt  package.xml
src/turtle_control_pkg/config/: turtle_params.yaml
src/turtle_control_pkg/launch/: turtle_control.launch
src/turtle_control_pkg/msg/: TurtleSpeed.msg
src/turtle_control_pkg/scripts/: test_node.py  test_node.py.save  (+1 more)
(+33 files in other folders)
